--- a/public/index.html
+++ b/public/index.html
@@ -13,9 +13,11 @@
    <style>
     *{
       font-family: 'Bai Jamjuree', sans-serif;
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
+      
+    }
+    body{
+     margin: 0px;
+     padding: 0px;
     }
    </style>
     <title>React App</title>
